# Mudae-Selfbot-discord-self.py-

./: .gitignore  LICENSE  README.md  cmds.txt  pyproject.toml  waifu_settings_list.json
channeldata/: 1107847498824949801.txt  663484245523562530.txt
executables/: main.py  notes.txt
